some improvements to the sphinx doc theme:   - use a wider viewport to render the documentation (too much space is lost on non HD screens)   - don't justify text (looks ugly IMHO with those non regular white space widths)   - add the possibility to hide the menu side bar   - improve plugin parameters table rendering with a simple hack (columns widths are now correctly computed)
git-svn-id: https://svn.code.sf.net/p/auber/code/tulip@12535 f5d4c5f9-c943-4916-8a57-bd8605bf961c

--- a/doc/common/_static/customized.css
+++ b/doc/common/_static/customized.css
@@ -17,13 +17,14 @@ body {
   line-height: 1.4em;
   color: black;
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 
 /* Page layout */
 
 div.header, div.content, div.footer {
-  width: 70em;
+  width: 85em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -168,13 +169,12 @@ div.content-wrapper {
 }
 
 div.document {
-  width: 50em;
+  width: 64em;
   float: right;
 }
 
 div.body {
   padding-right: 2em;
-  text-align: justify;
 }
 
 div.document h1 {
